--- a/assets/package.json
+++ b/assets/package.json
@@ -6,20 +6,23 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "js-yaml": "^3.13.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.0.0",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^2.1.1",
+    "eslint": "^6.6.0",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "4.4.0",
-    "webpack-cli": "^2.0.10"
+    "webpack": "4.34.0",
+    "webpack-cli": "^3.3.4"
+  },
+  "resolutions": {
+    "optimize-css-assets-webpack-plugin/**/js-yaml": "^3.13.1"
   }
 }
